fix: improve button border contrast when organization is set to fram. (#230)
* Adding a different active bordor colour to meet UU criterias when org is FRAM.

* Added an alternative button .css class to meet UU criterias when organization is FRAM.

* Remove exessive line.

* Imporve border color contrast for filter button.

* Rename .css classes.

* Rename .css class.

* Rename .css class.

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -107,22 +107,58 @@
   box-shadow: inset 0 0 0 var(--border-width-slim)
     var(--interactive-interactive_0-default-text);
 }
+
 .button--interactive_0--bordered:hover {
   background-color: var(--interactive-interactive_0-hover-background);
   color: var(--interactive-interactive_0-hover-text);
 }
+
 .button--interactive_0--bordered:active {
   background-color: var(--interactive-interactive_0-active-background);
   color: var(--interactive-interactive_0-active-text);
 }
+
 .button--interactive_0--bordered:disabled,
 .button--interactive_0--bordered.button--disabled {
   background-color: var(--interactive-interactive_0-disabled-background);
   color: var(--interactive-interactive_0-disabled-text);
 }
+
 .button--interactive_0--bordered:focus {
   outline: 0;
-  box-shadow: inset 0 0 0 var(--border-width-medium);
+  box-shadow: inset 0 0 0 var(--border-width-medium)
+    var(--interactive-interactive_0-outline-background);
+}
+
+/* Interactive button 0 bordered alternative background. */
+.button--interactive_0--bordered-light-outline,
+.button--interactive_0--bordered-light-outline:visited {
+  background-color: var(--interactive-interactive_0-default-background);
+  color: var(--interactive-interactive_0-default-text);
+  box-shadow: inset 0 0 0 var(--border-width-slim)
+    var(--interactive-interactive_0-default-text);
+}
+
+.button--interactive_0--bordered-light-outline:hover {
+  background-color: var(--interactive-interactive_0-hover-background);
+  color: var(--interactive-interactive_0-hover-text);
+}
+
+.button--interactive_0--bordered-light-outline:active {
+  background-color: var(--interactive-interactive_1-hover-background);
+  color: var(--interactive-interactive_1-active-text);
+}
+
+.button--interactive_0--bordered-light-outline:disabled,
+.button--interactive_0--bordered-light-outline.button--disabled {
+  background-color: var(--interactive-interactive_0-disabled-background);
+  color: var(--interactive-interactive_0-disabled-text);
+}
+
+.button--interactive_0--bordered-light-outline:focus {
+  outline: 0;
+  box-shadow: inset 0 0 0 var(--border-width-medium)
+    var(--interactive-interactive_0-active-background);
 }
 
 /* Interactive button 1 */
@@ -175,6 +211,32 @@
   outline: 0;
   box-shadow: inset 0 0 0 var(--border-width-medium)
     var(--interactive-interactive_2-outline-background);
+}
+
+/* Interactive button 2 alternative */
+
+.button--interactive_2--light-outline,
+.button--interactive_2--light-outline:visited {
+  background-color: var(--interactive-interactive_2-default-background);
+  color: var(--interactive-interactive_2-default-text);
+}
+.button--interactive_2--light-outline:hover {
+  background-color: var(--interactive-interactive_2-hover-background);
+  color: var(--interactive-interactive_2-hover-text);
+}
+.button--interactive_2--light-outline:active {
+  background-color: var(--interactive-interactive_2-active-background);
+  color: var(--interactive-interactive_2-active-text);
+}
+.button--interactive_2--light-outline:disabled,
+.button--interactive_2--light-outline.button--disabled {
+  background-color: var(--interactive-interactive_2-disabled-background);
+  color: var(--interactive-interactive_2-disabled-text);
+}
+.button--interactive_2--light-outline:focus {
+  outline: 0;
+  box-shadow: inset 0 0 0 var(--border-width-medium)
+    var(--interactive-interactive_1-active-background);
 }
 
 /* Interactive button 3 */
