--- a/src/widget/widget.module.css
+++ b/src/widget/widget.module.css
@@ -234,7 +234,8 @@
 }
 .button:focus {
   outline: 0;
-  box-shadow: inset 0 0 0 var(--border-width-medium);
+  box-shadow: inset 0 0 0 var(--border-width-medium)
+    var(--interactive-interactive_0-outline-background);
 }
 
 /* Autocomplete */
